# rustserve

./: Cargo.toml  PRD.md  README.md
docs/: initial-prompt.md  prd-daemon-mode.md  prd-webdav.md
docs/plans/: 2026-05-13-serve-file-server.md  2026-05-15-daemon-mode.md
src/: cli.rs  lib.rs  logging.rs  main.rs  network.rs  ports.rs  state.rs
src/server/: auth.rs  handlers.rs  listing.rs  mod.rs  security.rs  tls.rs  tracking.rs  upload.rs  webdav.rs  webdav_xml.rs
src/tui/: app.rs  mod.rs  ui.rs
src/webui/: admin.html  assets.rs  mod.rs
tests/: cli_e2e.rs  integration_test.rs
